test/files/neg/t8923.check
t8923.scala:3: error: repeated parameters are only allowed in method signatures; use Seq instead
  def total: (Int*) => Int = _.sum
                  ^
t8923.scala:5: error: repeated parameters are only allowed in method signatures; use Seq instead
  def heady[A]: (A*) => A = _.head
                   ^
two errors found
